--- a/client/src/routes/listPage/ListPage.scss
+++ b/client/src/routes/listPage/ListPage.scss
@@ -6,6 +6,8 @@
     .listContainer{
         flex: 3;
         height: 100%;
+
+
         .wrapper{
             height: 100%;
             padding-right: 50px;
@@ -13,12 +15,14 @@
             flex-direction: column;
             gap: 50px;
             overflow-y: scroll;
+            padding-bottom: 50px;
         }
     }
 
     .mapContainer{
         flex: 2;
         background-color: #fcf5f3;
+        height: 100%;
     }
     
 }
