--- a/client/src/routes/listPage/ListPage.scss
+++ b/client/src/routes/listPage/ListPage.scss
@@ -1,3 +1,4 @@
+@import "../../responsive.scss";
 .listPage{
     display: flex;
     height: 100%;
@@ -16,6 +17,9 @@
             gap: 50px;
             overflow-y: scroll;
             padding-bottom: 50px;
+        }
+        .wrapper::-webkit-scrollbar {
+            display: none;
         }
     }
 
