--- a/client/src/routes/singlepage/Singlepage.scss
+++ b/client/src/routes/singlepage/Singlepage.scss
@@ -1,11 +1,25 @@
+@import "../../responsive.scss";
 .singlePage{
     display: flex;
     height: 100%;
 
+    @include md{
+        flex-direction: column;
+        overflow-y: scroll;
+    }
+
     .details{
         flex: 3;
+        height: 100%;
+        overflow-y: scroll;
         .wrapper{
             padding-right: 50px;
+        }
+
+        @include md{
+            flex: none;
+            height: max-content;
+            margin-bottom: 50px;
         }
 
         .info{
@@ -50,6 +64,10 @@
                     border-radius: 10px;
                     background-color: rgba($color: #dbeec275, $alpha: 1.0);
                     font-weight: 600;
+
+                    @include sm{
+                        padding: 5px;
+                    }
                     img{
                         width: 50px;
                         height: 50px;
@@ -65,13 +83,126 @@
             }
         }
     }
+    .details::-webkit-scrollbar {
+        display: none;
+    }
 
     .features{
         flex: 2;
         background-color: #fcf5f3;
-
+        height: 100%;
+        overflow-y: scroll;
+        @include md{
+            flex: none;
+            height: max-content;
+            
+        }
+        .features::-webkit-scrollbar {
+            display: none;
+        }
         .wrapper{
             padding: 0px 50px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            img{
+                width: 24px;
+                height: 24px;
+            }
+
+            .title{
+                font-weight: bold;
+                font-size: 18px;
+                margin-bottom: 10px;
+            }
+            .feature{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+
+                img{
+                    background-color: rgba(254, 205, 81, 0.209);
+                }
+
+                .featureText{
+                    span{
+                        font-weight: bold;
+                    }
+                    p{
+                        font-size: 14px;
+                    }
+                }
+            }
+
+            .listVertical{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                padding: 20px 10px;
+                background-color: #fff;
+                border-radius: 10px;
+            }
+            .listHorizontal{
+                display: flex;
+                justify-content: space-between;               
+                padding: 20px 10px;
+                background-color: #fff;
+                border-radius: 10px;
+            }
+
+            .sizes{
+                display: flex;
+                justify-content: space-between;
+                @include lg{
+                    font-size: 12px;
+                }
+                
+                .size{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    background-color: #fff;
+                    border-radius: 10px;
+
+                }
+            }
+
+            .mapContainer{
+                width: 100%;
+                height: 200px;
+
+            }
+
+            .buttons{
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 50px;
+
+                button{
+                    padding: 20px;
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    background-color: white;
+                    border: 1px solid #fece51;
+                    border-radius: 5px;
+                    cursor: pointer;
+
+
+                    img{
+                        width: 16px;
+                        height: 16px;
+                    }
+
+                }
+            }
+
         }
+    }
+
+    .features::-webkit-scrollbar {
+        display: none;
     }
 }
