--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -118,6 +118,10 @@
             }
         }
 
+        .center::-webkit-scrollbar{
+            display: none;
+        }
+
         .bottom{
             // border-top: 2px solid #57c14b85;
             height: 50px;
